--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+{<img src="https://travis-ci.org/Volkov4191/tm.png?branch=master" alt="Build Status" />}[https://travis-ci.org/Volkov4191/tm]
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
